# ai_middle_project

./: .gitignore
16337237_code/李新锐/: DataFileProcess.ipynb  KNN.ipynb  LR.ipynb  NB.ipynb  PreProcessing.py  Vectorize.ipynb  ai_base.py  readme.txt
16337237_code/李新锐/RegressionTree/: CMakeLists.txt  DecisionTree.cbp  Makefile  main.cpp  readme.txt
16337237_code/李新锐/RegressionTree/inc/: AI_utility.h  array_view.h  decision_tree.h  matrix_view.h  python_interface.h  random_lib.h  regression_tree.h
16337237_code/李新锐/RegressionTree/src/: AI_utility.cpp  decision_tree.cpp  random_lib.cpp  regression_tree.cpp
16337237_code/李新锐/RegressionTree/unit_test/: CMakeLists.txt  Makefile  test_AI_utility.cpp  test_array_view.cpp  test_decison_tree.cpp  test_eigen3.cpp  test_matrix_view.cpp  test_ranges.cpp  test_regression_tree.cpp
16337237_code/李沐晗/: cnn.py  main.py  trainer.py  utils.py
16337237_code/王永锋/: readme.txt
16337237_code/王永锋/ai_middle_project/2-classification/data/: Vectorize.ipynb  data-clean-and-to-mat.ipynb
16337237_code/王永锋/ai_middle_project/2-classification/results/: 2018-10-05-12-14.csv  2018-10-05-16-00.csv  KNN-12-2018-10-05-18-05.csv  KNN-12-2018-10-05-18-27.csv  KNN-17-2018-10-05-18-51.csv  doc2vec-lr-2018-10-05-16-07.csv  doc2vec-lr-2018-10-05-16-43.csv  doc2vec-mlp-2018-10-20-23-30.csv  doc2vec-mlp-2018-10-20-23-32.csv  doc2vec-mlp-2018-10-20-23-34.csv  doc2vec-nn-122018-10-21-08-30.csv  doc2vec-nn-172018-10-21-08-31.csv  doc2vec-nn-22018-10-21-08-30.csv  doc2vec-nn-222018-10-21-08-31.csv  doc2vec-nn-272018-10-21-08-31.csv  doc2vec-nn-322018-10-21-08-31.csv  doc2vec-nn-372018-10-21-08-31.csv  doc2vec-nn-5-0.082018-10-21-08-52.csv  doc2vec-nn-5-0.092018-10-21-08-52.csv  doc2vec-nn-5-0.112018-10-21-08-52.csv  doc2vec-nn-5-0.12018-10-21-08-52.csv  doc2vec-nn-5-0.122018-10-21-08-52.csv  doc2vec-nn-5-0.132018-10-21-08-52.csv  doc2vec-nn-5-0.142018-10-21-08-52.csv  doc2vec-nn-72018-10-21-08-30.csv
16337237_code/王永锋/ai_middle_project/2-classification/wyf/: best-cart.ipynb  best-lr.ipynb  best-mlp.ipynb  wyf-lr-baseline.ipynb
16337237_code/王永锋/ai_middle_project/2-classification/yb-nn/: best-nn-onehot.ipynb  best-nn-tfidf.ipynb  best-nn.ipynb
16337237_code/王永锋/ai_middle_project/5-classification/data/: Vectorize.ipynb  ai_base.py  data-doc2vec.py
16337237_code/王永锋/ai_middle_project/5-classification/results/: KNN-13-2018-10-05-19-20.csv  KNN-14-2018-10-05-19-32.csv  KNN-19-2018-10-05-20-08.csv  doc2vec-nn-0.25-2018-10-21-09-00.csv  doc2vec-nn-0.26-2018-10-21-09-00.csv  doc2vec-nn-0.27-2018-10-21-09-00.csv  doc2vec-nn-0.28-2018-10-21-09-00.csv  doc2vec-nn-0.29-2018-10-21-09-00.csv  doc2vec-nn-0.3-2018-10-21-09-00.csv  doc2vec-nn-122018-10-21-08-35.csv  doc2vec-nn-172018-10-21-08-35.csv  doc2vec-nn-22018-10-21-08-35.csv  doc2vec-nn-222018-10-21-08-35.csv  doc2vec-nn-272018-10-21-08-35.csv  doc2vec-nn-322018-10-21-08-35.csv  doc2vec-nn-372018-10-21-08-35.csv  doc2vec-nn-72018-10-21-08-35.csv
16337237_code/王永锋/ai_middle_project/5-classification/wyf/: wyf-knn-baseline.py
16337237_code/王永锋/ai_middle_project/5-classification/yb-nn/: best-nn-doc2vec-2.ipynb  best-nn-doc2vec.ipynb  best-nn-onehot.ipynb  best-nn-tfidf.ipynb  best-nn.ipynb
16337237_code/王永锋/ai_middle_project/regression/results/: 2018-10-04-08-32.csv  CART-m500-2018-10-17-10-34.csv  CART-m500-no_weight-no_feat2018-10-17-11-33.csv  CART-m500-weight1-no_feat2018-10-17-11-27.csv  GBDT-0.05-820-2018-10-19-13-54.csv
16337237_code/王永锋/ai_middle_project/regression/wyf/: best-cart.ipynb  best-gbdt.ipynb  wyf-GBDT-baseline-2.py  wyf-GBDT-baseline-checkpoint.ipynb  wyf-GBDT-baseline.ipynb  wyf-GBDT-baseline.py  wyf-LinearRegression-baseline.py  wyf-cart-baseline.ipynb  wyf-cart-baseline.py  wyf-knn-baseline.ipynb
16337237_code/王永锋/ai_middle_project/regression/yb-nn/: Untitled.ipynb
16337237_code/王永锋/pyml/metrics/: classification.py
16337237_code/颜彬/: readme.md
2-classification/data/: trainLabel.txt
2-classification/results/: 2018-10-05-12-14.csv  KNN-15-2018-10-05-18-39.csv  KNN-19-2018-10-05-19-04.csv  KNN-20-2018-10-05-19-16.csv  SCHEMA.INI  doc2vec-lr-2018-10-05-16-07.csv  untitled.txt
2-classification/wyf/: data-preprocessing.ipynb  wyf-baseline.ipynb  wyf-baseline.py  wyf-knn-baseline.ipynb  wyf-knn-baseline.py  wyf-lr-baseline.ipynb  wyf-lr-baseline.py
2-classification/yb/: nn-baseline.py  nn.py  nn_relu.py  nn_relu_deep.py  nn_relu_very_wide.py  nn_relu_wide.py  testX.npy  trainY.npy
5-classification/data/: trainLabel.txt
5-classification/results/: KNN-15-2018-10-05-19-44.csv  KNN-18-2018-10-05-19-56.csv  KNN-20-2018-10-05-20-20.csv  untitled.txt
5-classification/wyf/: wyf-test-baseline.py
5-classification/yb/: nn-baseline.py  testX.npy  trainY.npy
regression/: wyf-baseline.ipynb  wyf-baseline.py
regression/data/: test_add_feat.xlsx  test_add_feat_score.xlsx  ~$train.xlsx
regression/results/: GBDT-0.1-100-2018-10-11-05-11.csv  GBDT-0.2-50-2018-10-17-13-33.csv  LinearRegression-0.01-3000-2018-10-05-22-03.csv  LinearRegression-0.01-3000-2018-10-05-22-08.csv  untitled.txt
regression/wyf/: test_add_feat.xlsx  wyf-GBDT-baseline.ipynb  wyf-GBDT-baseline.py  wyf-LinearRegression-baseline.ipynb  wyf-LinearRegression-baseline.py  wyf-cart-baseline.ipynb  wyf-cart-baseline.py  wyf-feature-engineering.py  wyf-knn-baseline.py  wyf-tag-helper-1.ipynb  wyf-tag-helper-1.py  wyf-tag-helper.py
regression/wyf/feature/: readme.md
regression/wyf/results/: CART-m1000-2018-10-17-10-55.csv  CART-m1000-no_weight-add_tag_feat2018-10-18-23-56.csv  CART-m500-no_weight-add_tag_feat2018-10-18-23-54.csv  CART-m500-weight12018-10-17-11-23.csv
