add_executable(test_eigen3.cpp test_eigen3.cpp ../src/AI_utility.cpp ../src/matrix_view.cpp ../src/random_lib.cpp)
target_link_libraries (test_eigen3.cpp Eigen3::Eigen gtest)
add_executable(test_array_view.cpp test_array_view.cpp ../src/AI_utility.cpp ../src/matrix_view.cpp ../src/random_lib.cpp )
target_link_libraries (test_array_view.cpp gtest)
add_executable(test_matrix_view.cpp test_matrix_view.cpp ../src/AI_utility.cpp ../src/matrix_view.cpp ../src/random_lib.cpp)
target_link_libraries (test_matrix_view.cpp gtest)
add_executable(test_decison_tree.cpp test_decison_tree.cpp ../src/AI_utility.cpp ../src/decision_tree.cpp ../src/matrix_view.cpp ../src/random_lib.cpp)
target_link_libraries (test_decison_tree.cpp gtest)
add_executable(test_ranges.cpp test_ranges.cpp ../src/AI_utility.cpp ../src/matrix_view.cpp ../src/random_lib.cpp)
target_link_libraries (test_ranges.cpp gtest)
add_executable(test_AI_utility.cpp test_AI_utility.cpp ../src/AI_utility.cpp ../src/matrix_view.cpp ../src/random_lib.cpp)
target_link_libraries (test_AI_utility.cpp gtest)
add_executable(test_regression_tree.cpp test_regression_tree.cpp ../src/AI_utility.cpp ../src/matrix_view.cpp ../src/random_lib.cpp ../src/regression_tree.cpp)
target_link_libraries(test_regression_tree.cpp gtest)
